# uncle-bob

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.MD  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  Taskfile.yml  package-lock.json  package.json  plugin.json  pyproject.toml  ruff.toml
.github/agents/: governance-help.agent.md  governance.agent.md  teacher.agent.md  ub-customizations.agent.md  ub-governance.agent.md  ub-initiative-flow.agent.md  ub-teacher.agent.md  ub-workflow.agent.md
.github/plugin/: marketplace.json  plugin.json
.github/prompts/: governance-help.prompt.md  ub-customize.prompt.md
.github/workflows/: README.md  build-docs.yml  decision-governance.yml  deploy.yml  governance-skill-integrity.yml  lint.yml  quality.yml  release-please.yml
.ub-workflows/initiatives/: AGENTS.md  README.md  operation-guide.md  user-guide.md
docs/: AGENTS.md  TODO.md  freshness-policy.md  index.md  install.md  packaging-policy.md
docs/.vitepress/: config.ts
docs/audits/: version-depin-agents-md.md  version-depin-code-quality.md  version-depin-dev-css.md  version-depin-dev-nuxt.md  version-depin-dev-python.md  version-depin-dev-tailwind.md  version-depin-dev-ts.md  version-depin-dev-vuejs.md  version-depin-governance.md  version-depin-overview.md
docs/deep-dives/: ub-governance.md  ub-workflow.md  workflow-governance.md
docs/guide/: core-stack.md  portability-model.md  references-progressive-disclosure.md  routing-model.md  (+1 more)
scripts/: check-docs-sync.mjs
(+292 files in other folders)
